--- a/app/src/main/res/drawable/main_button.xml
+++ b/app/src/main/res/drawable/main_button.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EAEAEA" />
+    <solid android:color="@color/main_color" />
+    <corners android:radius="2dp" />
     <stroke
         android:width="1dp"
         android:color="@color/black" />
     <size
-        android:width="50dp"
-        android:height="50dp" />
+        android:width="88dp"
+        android:height="36dp" />
 </shape>
