--- a/app/src/main/res/drawable/shape_weekend_button_true.xml
+++ b/app/src/main/res/drawable/shape_weekend_button_true.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EAEAEA" />
+    <solid android:color="@color/main_color" />
     <stroke
-        android:width="2dp"
-        android:color="@color/main_color" />
+        android:width="1dp"
+        android:color="@color/black" />
     <size
         android:width="50dp"
         android:height="50dp" />
