--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/back_ground_color">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,35 +16,38 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/main_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/hour_of_24"
+        android:layout_above="@+id/main_24hour_textview"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
-        android:text="0개의 할 일이 남아있습니다."
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="0개의 할 일이 남아있습니다." />
 
     <TextView
-        android:id="@+id/hour_of_24"
+        android:id="@+id/main_24hour_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:text="24시간 남은 할 일이 0개 있습니다."
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="24시간 남은 할 일이 0개 있습니다." />
 
     <TextView
+        android:id="@+id/main_famous_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="50dp"
-        android:text="@string/famous_saying"
         android:textAlignment="center"
         android:textColor="@color/main_color"
-        android:textSize="19sp"
-        android:textStyle="bold" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:text="바쁜 자는 단지 마귀 하나로부터 유혹받지만,\n한가로운 자는 수많은 마귀들로부터 유혹당한다." />
 
 </RelativeLayout>
