--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,21 +3,21 @@
     <item
         android:id="@+id/page_1"
         android:enabled="true"
-        android:icon="@drawable/abc_vector_test"
+        android:icon="@drawable/setting_icon"
         android:title="설정" />
     <item
         android:id="@+id/page_2"
         android:enabled="true"
-        android:icon="@drawable/abc_vector_test"
+        android:icon="@drawable/main_icon"
         android:title="타이틀" />
     <item
         android:id="@+id/page_3"
         android:enabled="true"
-        android:icon="@drawable/abc_vector_test"
+        android:icon="@drawable/list_icon"
         android:title="할 일 목록" />
     <item
         android:id="@+id/page_4"
         android:enabled="true"
-        android:icon="@drawable/abc_vector_test"
+        android:icon="@drawable/chart_icon"
         android:title="계획표" />
 </menu>
