--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="main_color">#27ae60</color>
+    <color name="main_color">#2BAE66</color>
+    <color name="back_ground_color">#FCF6F5</color>
 </resources>
